- fixed x-overflow - sign-in padding adjustment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -470,7 +470,7 @@ div[data-pc-section='mask']:has(div[id='gameActionDialogue']){
   gap: 5px;
   border-radius: 8px;
   border: 1px #ffffffbc solid;
-  padding: 8px 12px 8px 12px;
+  padding: 0px 10px 0px 10px;
   font-family: "Exo";
   font-size: 15px;
 font-weight: 500;
@@ -4400,7 +4400,7 @@ button[type='device_switcher']:enabled:focus {
 }
 
 .app {
-  @apply relative z-10 flex justify-center items-center flex-col max-w-[100%] mx-auto  ;
+  @apply relative z-10 flex justify-center items-center flex-col  ;
 }
 
 .black_btn {
